Fix mobile button centering by breaking out of container padding

--- a/style.css
+++ b/style.css
@@ -821,6 +821,9 @@ h1 {
 
     .btn-wrapper {
         justify-content: center;
+        width: 100vw;
+        margin-left: -20px;
+        margin-bottom: 40px;
     }
 
     .hero .btn-telegram {
